# ratride

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  justfile  main.md  test.md
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml  pages.yml
docs/: demo.md  index.html  package-lock.json  package.json  slides.md  vite.config.js
docs/public/: demo.md
examples/: figlet.md  header.md  layout.md  test.md
ratride/: Cargo.toml  README.md
ratride-core/: Cargo.toml
ratride-core/src/: lib.rs  markdown.rs  theme.rs
ratride-web/: Cargo.toml  README.md  build.rs  index.html  package-lock.json  package.json
ratride-web/src/: app.rs  backend.rs  index.d.ts  index.js  index.ts  lib.rs  main.rs  overlay.rs
ratride/src/: color.rs  export.rs  figlet.rs  lib.rs  main.rs  markdown.rs  render.rs  serve.rs  theme.rs  transition.rs
src/: main.rs  markdown.rs
