[package]
name = "onishi50-slide"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
pulldown-cmark = "0.13"
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"] }
image = "0.25"
tachyonfx = "0.23"
base64 = "0.22"
