[package]
name = "ratride-web"
version = "0.1.0"
edition = "2024"
publish = false

[build-dependencies]
base64 = "0.22"

[dependencies]
ratride-core = { path = "../ratride-core" }
ratzilla = "0.3"
tachyonfx = { version = "0.23", features = ["wasm"] }
web-sys = { version = "0.3", features = ["DomRect"] }
