[package]
name = "ratride-web"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ratride = { path = "../ratride", default-features = false }
ratatui = { version = "0.30", default-features = false }
tachyonfx = { version = "0.23", features = ["wasm"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement",
    "CanvasRenderingContext2d", "KeyboardEvent", "TextMetrics",
    "HtmlImageElement",
    "Element", "HtmlElement", "HtmlAnchorElement", "Node",
    "CssStyleDeclaration",
    "MediaQueryList",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[package.metadata.release]
release = false
