[package]
name = "ratride"
version = "0.5.0"
edition = "2024"
description = "Markdown slide presenter for TUI & Web"
license = "MIT"
repository = "https://github.com/fand/ratride"
readme = "../README.md"
keywords = ["slides", "presentation", "terminal", "tui", "markdown"]
categories = ["command-line-utilities"]
rust-version = "1.85"
exclude = ["../demo.png", "../main.md", "../test.md", "../PLAN.md"]

[lib]
name = "ratride"
path = "src/lib.rs"

[[bin]]
name = "ratride"
path = "src/main.rs"
required-features = ["terminal"]

[features]
default = ["terminal"]
terminal = ["dep:crossterm", "dep:ratatui-image", "dep:image", "dep:clap", "dep:base64", "dep:tiny_http", "dep:notify"]

[dependencies]
ratatui = { version = "0.30", default-features = false }
pulldown-cmark = "0.13"
crossterm = { version = "0.28", optional = true }
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"], optional = true }
image = { version = "0.25", optional = true }
tachyonfx = "0.23"
base64 = { version = "0.22", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy", "plist-load"] }
tiny_http = { version = "0.12", optional = true }
notify = { version = "8", optional = true }
